--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
           data-smooth-scroll
           data-sticky-container
         >
-          <div class="sticky center-item" data-sticky>
+          <div class="sticky center-item left-fixed" data-sticky>
             <a id="logo" href="index.html">JS</a>
           </div>
           <div
-            class="sticky center-item"
+            class="sticky center-item left-fixed"
             data-options="marginBottom:12;"
             data-stick-to="bottom"
             data-sticky
@@ -38,7 +38,7 @@
             </a>
           </div>
           <div
-            class="sticky center-item"
+            class="sticky center-item left-fixed"
             data-options="marginBottom:5;"
             data-stick-to="bottom"
             data-sticky
@@ -46,7 +46,7 @@
             <a href=""> <i class="fi-social-github git-icon"></i> </a>
           </div>
         </div>
-        <div class="large-11 medium-11 cell add-divider">
+        <div class="large-11 medium-11 cell">
           <div data-sticky-container>
             <div class="top-bar" data-sticky data-margin-top="0">
               <div class="top-bar-right">
@@ -92,11 +92,13 @@
               <div class="grid-x grid-padding-x add-padding extra-space">
                 <div class="large-7 medium-7 cell">
                   <p class="about-me" style="padding-bottom: 10px">
-                    I graduated with a bachelor’s degree in Neuroscience and a
-                    minor in visual arts. I am currently working towards to
-                    become a UI/UX designer and a product designer. I pursue my
-                    passion in interactive design to spark change in underserved
-                    people’s lives
+                    Having lived in the Philippines, Korea, and the US, I
+                    consider myself to be a bit of a nomad. I hold a bachelor’s
+                    degree in Neuroscience, a minor in visual arts, and am
+                    currently working towards becoming a UI/UX designer and
+                    product designer. I pursue my passion in interactive design
+                    to spark change in people’s lives. In my free time, I
+                    tinker, cook and craft.
                   </p>
                   <p class="keyword">Academic Research</p>
                   <p class="keyword">Visual Design</p>
@@ -104,21 +106,22 @@
                 </div>
 
                 <div class="large-5 medium-5 cell">
-                  <p>
-                    Johns Hopkins University 2014 - 2018 <br />
-                    BS NeuroScience <br />
-                    Minor Visual Art
-                  </p>
-                  <p>
-                    Johns Hopkins University 2014 - 2018 <br />
-                    BS NeuroScience <br />
-                    Minor Visual Art
-                  </p>
-                  <p>
-                    Johns Hopkins University 2014 - 2018 <br />
-                    BS NeuroScience <br />
-                    Minor Visual Art
-                  </p>
+                  <div class="right-items">
+                    <p>
+                      Johns Hopkins University 2014 - 2018 <br />
+                      BS NeuroScience <br />
+                      Minor Visual Art
+                    </p>
+                    <p>
+                      Brent International School 2008 - 2014 <br />
+                      Manila, Philippines
+                    </p>
+                    <p>
+                      Johns Hopkins University 2014 - 2018 <br />
+                      BS NeuroScience <br />
+                      Minor Visual Art
+                    </p>
+                  </div>
                 </div>
               </div>
             </div>
