Minor Details fixed

--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
           data-smooth-scroll
           data-sticky-container
         >
-          <div class="sticky center-item left-fixed" data-sticky>
+          <div
+            class="sticky center-item left-fixed"
+            data-options="marginTop:2;"
+            data-sticky
+          >
             <a id="logo" href="index.html">JS</a>
           </div>
           <div
@@ -100,26 +104,18 @@
                     to spark change in people’s lives. In my free time, I
                     tinker, cook and craft.
                   </p>
-                  <p class="keyword">Academic Research</p>
-                  <p class="keyword">Visual Design</p>
-                  <p class="keyword">Business Consulting</p>
                 </div>
 
                 <div class="large-5 medium-5 cell">
                   <div class="right-items">
                     <p>
                       Johns Hopkins University 2014 - 2018 <br />
-                      BS NeuroScience <br />
+                      BS Neuroscience <br />
                       Minor Visual Art
                     </p>
                     <p>
                       Brent International School 2008 - 2014 <br />
                       Manila, Philippines
-                    </p>
-                    <p>
-                      Johns Hopkins University 2014 - 2018 <br />
-                      BS NeuroScience <br />
-                      Minor Visual Art
                     </p>
                   </div>
                 </div>
@@ -148,7 +144,7 @@
                     <a class="bg bg-one" href="works/uiux/1.html">
                       <div class="overlay"></div>
                       <h5 class="overlay-text text-center">
-                        <span class="overlay-text-title">DOGIETER </span> <br />
+                        <span class="overlay-text-title">Dogidiet </span> <br />
                         Dog weight management app
                       </h5>
                     </a>
