padding and github link added

--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
             data-stick-to="bottom"
             data-sticky
           >
-            <a href=""> <i class="fi-social-github git-icon"></i> </a>
+            <a href="https://github.com/jspark-2020">
+              <i class="fi-social-github git-icon"></i>
+            </a>
           </div>
         </div>
         <div class="large-11 medium-11 cell">
