1.html padding fix

--- a/works/uiux/1.html
+++ b/works/uiux/1.html
@@ -25,11 +25,15 @@
           data-smooth-scroll
           data-sticky-container
         >
-          <div class="sticky center-item" data-sticky>
+          <div
+            class="sticky center-item left-fixed"
+            data-options="marginTop:2;"
+            data-sticky
+          >
             <a id="logo" href="../../index.html">JS</a>
           </div>
           <div
-            class="sticky center-item"
+            class="sticky center-item left-fixed"
             data-options="marginBottom:12;"
             data-stick-to="bottom"
             data-sticky
@@ -39,12 +43,14 @@
             </a>
           </div>
           <div
-            class="sticky center-item"
+            class="sticky center-item left-fixed"
             data-options="marginBottom:5;"
             data-stick-to="bottom"
             data-sticky
           >
-            <a href=""> <i class="fi-social-github git-icon"></i> </a>
+            <a href="https://github.com/jspark-2020">
+              <i class="fi-social-github git-icon"></i>
+            </a>
           </div>
         </div>
         <div class="large-11 medium-11 cell add-divider">
@@ -57,7 +63,7 @@
                       <a href="../../index.html">Home</a>
                     </li>
                     <li class="active">
-                      <a href="">Work</a>
+                      <a href="../../index.html#second">Work</a>
                     </li>
                   </ul>
                   <a
@@ -69,7 +75,7 @@
               </div>
             </div>
           </div>
-          <div>
+          <div class="extra-space">
             <img src="../../assets/img/uiux1/uiux1_01.png" />
             <div class="grid-container">
               <div class="grid-x grid-padding-x work-element">
@@ -103,7 +109,7 @@
                 <div class="small-3 large-3" style="text-align: center">
                   <h4>Role</h4>
                   <div class="y-divider"></div>
-                  <h6>
+                  <h6 style="padding-top: 10px">
                     Product Designer <br />
                     UI/UX Designer <br />
                     Concept Development
