Photos added to the project

--- a/index.html
+++ b/index.html
@@ -159,14 +159,62 @@
                       </h5>
                     </a>
                   </div>
-                  <div class="grid-item"></div>
-                  <div class="grid-item"></div>
-                  <div class="grid-item"></div>
-                  <div class="grid-item"></div>
-                  <div class="grid-item"></div>
-                  <div class="grid-item"></div>
-                  <div class="grid-item"></div>
-                  <div class="grid-item"></div>
+                  <div class="grid-item center-item photography">
+                    <a class="bg bg-aq-p1" href="">
+                      <div class="overlay"></div>
+                      <h5 class="overlay-text text-center">
+                        <span class="overlay-text-title">Aquarium</span>
+                      </h5>
+                    </a>
+                  </div>
+                  <div class="grid-item center-item photography">
+                    <a class="bg bg-art-p1" href="">
+                      <div class="overlay"></div>
+                      <h5 class="overlay-text text-center">
+                        <span class="overlay-text-title">Artifact</span>
+                      </h5>
+                    </a>
+                  </div>
+                  <div class="grid-item center-item photography">
+                    <a class="bg bg-bw-p1" href="">
+                      <div class="overlay"></div>
+                      <h5 class="overlay-text text-center">
+                        <span class="overlay-text-title">Black & White</span>
+                      </h5>
+                    </a>
+                  </div>
+                  <div class="grid-item center-item photography">
+                    <a class="bg bg-ever-p1" href="">
+                      <div class="overlay"></div>
+                      <h5 class="overlay-text text-center">
+                        <span class="overlay-text-title">Evergreen</span>
+                      </h5>
+                    </a>
+                  </div>
+                  <div class="grid-item center-item photography">
+                    <a class="bg bg-farm-p1" href="">
+                      <div class="overlay"></div>
+                      <h5 class="overlay-text text-center">
+                        <span class="overlay-text-title">Farm</span>
+                      </h5>
+                    </a>
+                  </div>
+                  <div class="grid-item center-item photography">
+                    <a class="bg bg-gold-p1" href="">
+                      <div class="overlay"></div>
+                      <h5 class="overlay-text text-center">
+                        <span class="overlay-text-title">Golden Hour</span>
+                      </h5>
+                    </a>
+                  </div>
+                  <div class="grid-item center-item photography">
+                    <a class="bg bg-na-p1" href="">
+                      <div class="overlay"></div>
+                      <h5 class="overlay-text text-center">
+                        <span class="overlay-text-title">Naval</span>
+                      </h5>
+                    </a>
+                  </div>
                 </div>
               </div>
             </div>
