--- a/index.html
+++ b/index.html
@@ -151,11 +151,11 @@
                       </h5>
                     </a>
                   </div>
-                  <div class="grid-item center-item photography">
+                  <div class="grid-item center-item product_design">
                     <a class="bg bg-two" href="">
                       <div class="overlay"></div>
                       <h5 class="overlay-text text-center">
-                        <span class="overlay-text-title">IBM Hackathon </span>
+                        <span class="overlay-text-title">Petmille</span>
                       </h5>
                     </a>
                   </div>
