aquarium html added

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                     </a>
                   </div>
                   <div class="grid-item center-item photography">
-                    <a class="bg bg-aq-p1" href="">
+                    <a class="bg bg-aq-p1" href="works/photo/aqua.html">
                       <div class="overlay"></div>
                       <h5 class="overlay-text text-center">
                         <span class="overlay-text-title">Aquarium</span>
