photo htmls added

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                     </a>
                   </div>
                   <div class="grid-item center-item photography">
-                    <a class="bg bg-art-p1" href="">
+                    <a class="bg bg-art-p1" href="works/photo/artifact.html">
                       <div class="overlay"></div>
                       <h5 class="overlay-text text-center">
                         <span class="overlay-text-title">Artifact</span>
@@ -176,7 +176,7 @@
                     </a>
                   </div>
                   <div class="grid-item center-item photography">
-                    <a class="bg bg-bw-p1" href="">
+                    <a class="bg bg-bw-p1" href="works/photo/bw.html">
                       <div class="overlay"></div>
                       <h5 class="overlay-text text-center">
                         <span class="overlay-text-title">Black & White</span>
@@ -184,7 +184,7 @@
                     </a>
                   </div>
                   <div class="grid-item center-item photography">
-                    <a class="bg bg-ever-p1" href="">
+                    <a class="bg bg-ever-p1" href="works/photo/evergreen.html">
                       <div class="overlay"></div>
                       <h5 class="overlay-text text-center">
                         <span class="overlay-text-title">Evergreen</span>
@@ -192,7 +192,7 @@
                     </a>
                   </div>
                   <div class="grid-item center-item photography">
-                    <a class="bg bg-farm-p1" href="">
+                    <a class="bg bg-farm-p1" href="works/photo/farm.html">
                       <div class="overlay"></div>
                       <h5 class="overlay-text text-center">
                         <span class="overlay-text-title">Farm</span>
@@ -200,7 +200,7 @@
                     </a>
                   </div>
                   <div class="grid-item center-item photography">
-                    <a class="bg bg-gold-p1" href="">
+                    <a class="bg bg-gold-p1" href="works/photo/golden.html">
                       <div class="overlay"></div>
                       <h5 class="overlay-text text-center">
                         <span class="overlay-text-title">Golden Hour</span>
@@ -208,7 +208,7 @@
                     </a>
                   </div>
                   <div class="grid-item center-item photography">
-                    <a class="bg bg-na-p1" href="">
+                    <a class="bg bg-na-p1" href="works/photo/naval.html">
                       <div class="overlay"></div>
                       <h5 class="overlay-text text-center">
                         <span class="overlay-text-title">Naval</span>
