--- a/works/photo/bw.html
+++ b/works/photo/bw.html
@@ -78,37 +78,57 @@
           <div class="grid-y extra-space photo-group">
             <img
               class="photo-group"
-              src="../../assets/img/photo/Aquarium/Aqua1.jpg"
+              src="../../assets/img/photo/Black_white/BW1.jpg"
             />
             <img
               class="photo-group"
-              src="../../assets/img/photo/Aquarium/Aqua2.png"
+              src="../../assets/img/photo/Black_white/BW2.jpg"
             />
             <img
               class="photo-group"
-              src="../../assets/img/photo/Aquarium/Aqua3.jpg"
+              src="../../assets/img/photo/Black_white/BW3.jpg"
             />
             <img
               class="photo-group"
-              src="../../assets/img/photo/Aquarium/Aqua4.jpg"
+              src="../../assets/img/photo/Black_white/BW4.jpg"
             />
             <img
               class="photo-group"
-              src="../../assets/img/photo/Aquarium/Aqua5.jpg"
+              src="../../assets/img/photo/Black_white/BW5.jpg"
             />
             <img
               class="photo-group"
-              src="../../assets/img/photo/Aquarium/Aqua6.jpg"
+              src="../../assets/img/photo/Black_white/BW6.jpg"
             />
             <img
               class="photo-group"
-              src="../../assets/img/photo/Aquarium/Aqua7.jpg"
+              src="../../assets/img/photo/Black_white/BW7.jpg"
+            />
+            <img
+              class="photo-group"
+              src="../../assets/img/photo/Black_white/BW8.jpg"
+            />
+            <img
+              class="photo-group"
+              src="../../assets/img/photo/Black_white/BW9.jpg"
+            />
+            <img
+              class="photo-group"
+              src="../../assets/img/photo/Black_white/BW10.jpg"
+            />
+            <img
+              class="photo-group"
+              src="../../assets/img/photo/Black_white/BW11.jpg"
+            />
+            <img
+              class="photo-group"
+              src="../../assets/img/photo/Black_white/BW12.jpg"
             />
           </div>
           <div class="center-item" style="padding-top: 30px">
-            <a class="works_navigator" href="">&lt;</a>
+            <a class="works_navigator" href="artifact.html">&lt;</a>
             <h4 style="padding: 40px">Work</h4>
-            <a class="works_navigator" href="artifact.html">&gt;</a>
+            <a class="works_navigator" href="evergreen.html">&gt;</a>
           </div>
           <div class="grid-container">
             <div class="add-padding" style="padding-top: 30px">
