--- a/works/photo/farm.html
+++ b/works/photo/farm.html
@@ -78,37 +78,33 @@
           <div class="grid-y extra-space photo-group">
             <img
               class="photo-group"
-              src="../../assets/img/photo/Aquarium/Aqua1.jpg"
+              src="../../assets/img/photo/Farm/Farm1.jpg"
             />
             <img
               class="photo-group"
-              src="../../assets/img/photo/Aquarium/Aqua2.png"
+              src="../../assets/img/photo/Farm/Farm2.jpg"
             />
             <img
               class="photo-group"
-              src="../../assets/img/photo/Aquarium/Aqua3.jpg"
+              src="../../assets/img/photo/Farm/Farm3.jpg"
             />
             <img
               class="photo-group"
-              src="../../assets/img/photo/Aquarium/Aqua4.jpg"
+              src="../../assets/img/photo/Farm/Farm4.jpg"
             />
             <img
               class="photo-group"
-              src="../../assets/img/photo/Aquarium/Aqua5.jpg"
+              src="../../assets/img/photo/Farm/Farm5.jpg"
             />
             <img
               class="photo-group"
-              src="../../assets/img/photo/Aquarium/Aqua6.jpg"
-            />
-            <img
-              class="photo-group"
-              src="../../assets/img/photo/Aquarium/Aqua7.jpg"
+              src="../../assets/img/photo/Farm/Farm6.jpg"
             />
           </div>
           <div class="center-item" style="padding-top: 30px">
-            <a class="works_navigator" href="">&lt;</a>
+            <a class="works_navigator" href="evergreen.html">&lt;</a>
             <h4 style="padding: 40px">Work</h4>
-            <a class="works_navigator" href="artifact.html">&gt;</a>
+            <a class="works_navigator" href="golden.html">&gt;</a>
           </div>
           <div class="grid-container">
             <div class="add-padding" style="padding-top: 30px">
