--- a/works/photo/golden.html
+++ b/works/photo/golden.html
@@ -78,37 +78,29 @@
           <div class="grid-y extra-space photo-group">
             <img
               class="photo-group"
-              src="../../assets/img/photo/Aquarium/Aqua1.jpg"
+              src="../../assets/img/photo/Golden_hour/Golden1.jpg"
             />
             <img
               class="photo-group"
-              src="../../assets/img/photo/Aquarium/Aqua2.png"
+              src="../../assets/img/photo/Golden_hour/Golden2.jpg"
             />
             <img
               class="photo-group"
-              src="../../assets/img/photo/Aquarium/Aqua3.jpg"
+              src="../../assets/img/photo/Golden_hour/Golden3.jpg"
             />
             <img
               class="photo-group"
-              src="../../assets/img/photo/Aquarium/Aqua4.jpg"
+              src="../../assets/img/photo/Golden_hour/Golden4.jpg"
             />
             <img
               class="photo-group"
-              src="../../assets/img/photo/Aquarium/Aqua5.jpg"
-            />
-            <img
-              class="photo-group"
-              src="../../assets/img/photo/Aquarium/Aqua6.jpg"
-            />
-            <img
-              class="photo-group"
-              src="../../assets/img/photo/Aquarium/Aqua7.jpg"
+              src="../../assets/img/photo/Golden_hour/Golden5.jpg"
             />
           </div>
           <div class="center-item" style="padding-top: 30px">
-            <a class="works_navigator" href="">&lt;</a>
+            <a class="works_navigator" href="farm.html">&lt;</a>
             <h4 style="padding: 40px">Work</h4>
-            <a class="works_navigator" href="artifact.html">&gt;</a>
+            <a class="works_navigator" href="naval.html">&gt;</a>
           </div>
           <div class="grid-container">
             <div class="add-padding" style="padding-top: 30px">
