--- a/works/photo/naval.html
+++ b/works/photo/naval.html
@@ -78,37 +78,49 @@
           <div class="grid-y extra-space photo-group">
             <img
               class="photo-group"
-              src="../../assets/img/photo/Aquarium/Aqua1.jpg"
+              src="../../assets/img/photo/Naval/Naval1.jpg"
             />
             <img
               class="photo-group"
-              src="../../assets/img/photo/Aquarium/Aqua2.png"
+              src="../../assets/img/photo/Naval/Naval2.jpg"
             />
             <img
               class="photo-group"
-              src="../../assets/img/photo/Aquarium/Aqua3.jpg"
+              src="../../assets/img/photo/Naval/Naval3.jpg"
             />
             <img
               class="photo-group"
-              src="../../assets/img/photo/Aquarium/Aqua4.jpg"
+              src="../../assets/img/photo/Naval/Naval4.jpg"
             />
             <img
               class="photo-group"
-              src="../../assets/img/photo/Aquarium/Aqua5.jpg"
+              src="../../assets/img/photo/Naval/Naval5.jpg"
             />
             <img
               class="photo-group"
-              src="../../assets/img/photo/Aquarium/Aqua6.jpg"
+              src="../../assets/img/photo/Naval/Naval6.jpg"
             />
             <img
               class="photo-group"
-              src="../../assets/img/photo/Aquarium/Aqua7.jpg"
+              src="../../assets/img/photo/Naval/Naval7.jpg"
+            />
+            <img
+              class="photo-group"
+              src="../../assets/img/photo/Naval/Naval8.jpg"
+            />
+            <img
+              class="photo-group"
+              src="../../assets/img/photo/Naval/Naval9.jpg"
+            />
+            <img
+              class="photo-group"
+              src="../../assets/img/photo/Naval/Naval10.jpg"
             />
           </div>
           <div class="center-item" style="padding-top: 30px">
-            <a class="works_navigator" href="">&lt;</a>
+            <a class="works_navigator" href="golden.html">&lt;</a>
             <h4 style="padding: 40px">Work</h4>
-            <a class="works_navigator" href="artifact.html">&gt;</a>
+            <a class="works_navigator" href="">&gt;</a>
           </div>
           <div class="grid-container">
             <div class="add-padding" style="padding-top: 30px">
