photo names fix

--- a/works/photo/farm.html
+++ b/works/photo/farm.html
@@ -90,11 +90,11 @@
             />
             <img
               class="photo-group"
-              src="../../assets/img/photo/Farm/Farm4.jpg"
+              src="../../assets/img/photo/Farm/Farm4.png"
             />
             <img
               class="photo-group"
-              src="../../assets/img/photo/Farm/Farm5.jpg"
+              src="../../assets/img/photo/Farm/Farm5.png"
             />
             <img
               class="photo-group"
