project item list added

--- a/index.html
+++ b/index.html
@@ -134,10 +134,12 @@
                   <button class="button" data-filter=".product_design">
                     Product Design
                   </button>
+                  <button class="button" data-filter=".brochure">
+                    Brochure
+                  </button>
                   <button class="button" data-filter=".photography">
                     Photography
                   </button>
-                  <button class="button" data-filter=".drawing">Drawing</button>
                 </div>
                 <div class="grid">
                   <div class="grid-sizer"></div>
@@ -156,6 +158,16 @@
                       <div class="overlay"></div>
                       <h5 class="overlay-text text-center">
                         <span class="overlay-text-title">Petmille</span>
+                      </h5>
+                    </a>
+                  </div>
+                  <div class="grid-item center-item brochure">
+                    <a class="bg bg-two" href="">
+                      <div class="overlay"></div>
+                      <h5 class="overlay-text text-center">
+                        <span class="overlay-text-title">MastoCheck</span>
+                        <br />
+                        Early breast cancer diagnostics
                       </h5>
                     </a>
                   </div>
