loading height fix

--- a/index.html
+++ b/index.html
@@ -322,6 +322,8 @@
 
       onReady(function () {
         setVisible("#main", true);
+        resize();
+        reload();
         setVisible("#loading", false);
       });
     </script>
