--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="assets/css/basic.css" />
     <link rel="stylesheet" href="assets/css/font.css" />
     <link rel="stylesheet" href="assets/css/bg-image.css" />
+    <link rel="stylesheet" href="assets/css/loading.css" />
+
     <link
       rel="stylesheet"
       href="assets/foundation-icons/foundation-icons.css"
