--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                   <div class="grid-sizer"></div>
                   <div class="gutter-sizer"></div>
                   <div class="grid-item center-item uiux">
-                    <a class="bg bg-one" href="works/uiux/1.html">
+                    <a class="bg bg-one" href="works/uiux/dogidiet.html">
                       <div class="overlay"></div>
                       <h5 class="overlay-text text-center">
                         <span class="overlay-text-title">Dogidiet </span> <br />
@@ -156,7 +156,7 @@
                     </a>
                   </div>
                   <div class="grid-item center-item product_design">
-                    <a class="bg bg-two" href="">
+                    <a class="bg bg-two" href="works/product/petmille.html">
                       <div class="overlay"></div>
                       <h5 class="overlay-text text-center">
                         <span class="overlay-text-title">Petmille</span>
@@ -164,7 +164,10 @@
                     </a>
                   </div>
                   <div class="grid-item center-item brochure">
-                    <a class="bg bg-two" href="">
+                    <a
+                      class="bg bg-three"
+                      href="works/brochure/mastocheck.html"
+                    >
                       <div class="overlay"></div>
                       <h5 class="overlay-text text-center">
                         <span class="overlay-text-title">MastoCheck</span>
