petmille thumbnail change and link added to mastro

--- a/index.html
+++ b/index.html
@@ -159,7 +159,8 @@
                     <a class="bg bg-two" href="works/product/petmille.html">
                       <div class="overlay"></div>
                       <h5 class="overlay-text text-center">
-                        <span class="overlay-text-title">Petmille</span>
+                        <span class="overlay-text-title">Petmille</span> <br />
+                        A custiomized pet product information platform
                       </h5>
                     </a>
                   </div>
