--- a/works/uiux/dogidiet.html
+++ b/works/uiux/dogidiet.html
@@ -90,31 +90,22 @@
                   </h6>
                 </div>
                 <div class="small-3 large-3" style="text-align: center">
-                  <h4>Role</h4>
+                  <h4>Tools</h4>
                   <div class="y-divider"></div>
                   <h6 style="padding-top: 10px">
-                    Product Designer <br />
-                    UI/UX Designer <br />
-                    Concept Development
+                    Adobe XD <br />
+                    Photoshop, Illustrator
                   </h6>
                 </div>
                 <div class="small-3 large-3" style="text-align: center">
-                  <h4>Role</h4>
+                  <h4>Team Size</h4>
                   <div class="y-divider"></div>
-                  <h6 style="padding-top: 10px">
-                    Product Designer <br />
-                    UI/UX Designer <br />
-                    Concept Development
-                  </h6>
+                  <h6 style="padding-top: 10px">6 people</h6>
                 </div>
                 <div class="small-3 large-3" style="text-align: center">
-                  <h4>Role</h4>
+                  <h4>Timeframe</h4>
                   <div class="y-divider"></div>
-                  <h6 style="padding-top: 10px">
-                    Product Designer <br />
-                    UI/UX Designer <br />
-                    Concept Development
-                  </h6>
+                  <h6 style="padding-top: 10px">Jul-Aug 2020</h6>
                 </div>
                 <div class="add-padding">
                   <p class="work-summ">
