missing petmille detail added

--- a/works/product/petmille.html
+++ b/works/product/petmille.html
@@ -125,6 +125,11 @@
             <img src="../../assets/img/petmille/petmille_7.png" />
             <img src="../../assets/img/petmille/petmille_8.png" />
             <img src="../../assets/img/petmille/petmille_9.png" />
+            <img src="../../assets/img/petmille/petmille_10.png" />
+            <img src="../../assets/img/petmille/petmille_11.png" />
+            <img src="../../assets/img/petmille/petmille_12.png" />
+            <img src="../../assets/img/petmille/petmille_13.png" />
+            <img src="../../assets/img/petmille/petmille_14.png" />
           </div>
           <div class="center-item" style="padding-top: 30px">
             <a class="works_navigator" href="../uiux/dogidiet.html">&lt;</a>
