favicon and meta data added

--- a/index.html
+++ b/index.html
@@ -1,10 +1,33 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en">
   <head>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-3PTLPBVFC1"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-3PTLPBVFC1");
+    </script>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ji Su Park Portfolio</title>
+    <link rel="icon" type="image/png" href="assets/img/js_favicon.png" />
+    <meta property="og:title" content="JS Portfolio" />
+    <meta
+      property="og:description"
+      content="This is Ji Su Park's portfolio website."
+    />
+    <meta
+      property="og:image"
+      content="{{ url_for('static', filename='assets/img/brain.png') }}"
+    />
     <link rel="stylesheet" href="assets/css/foundation.css" />
     <link rel="stylesheet" href="assets/css/isotope.css" />
     <link rel="stylesheet" href="assets/css/basic.css" />
