--- a/works/product/petmille.html
+++ b/works/product/petmille.html
@@ -5,6 +5,16 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ji Su Park Portfolio</title>
+    <link rel="icon" type="image/png" href="assets/img/js_favicon.png" />
+    <meta property="og:title" content="JS Portfolio" />
+    <meta
+      property="og:description"
+      content="This is Ji Su Park's portfolio website."
+    />
+    <meta
+      property="og:image"
+      content="{{ url_for('static', filename='assets/img/brain.png') }}"
+    />
     <link rel="stylesheet" href="../../assets/css/foundation.css" />
     <link rel="stylesheet" href="../../assets/css/isotope.css" />
     <link rel="stylesheet" href="../../assets/css/basic.css" />
