--- a/works/photo/aqua.html
+++ b/works/photo/aqua.html
@@ -13,7 +13,7 @@
     />
     <meta
       property="og:image"
-      content="{{ url_for('static', filename='assets/img/brain.png') }}"
+      content="https://jspark-2020.github.io/assets/img/brain.png"
     />
     <link rel="stylesheet" href="../../assets/css/foundation.css" />
     <link rel="stylesheet" href="../../assets/css/isotope.css" />
