--- a/works/brochure/mastocheck.html
+++ b/works/brochure/mastocheck.html
@@ -98,9 +98,21 @@
             >
           </div>
           <div class="center-item" style="padding-top: 30px">
-            <a class="works_navigator" href="../product/petmille.html">&lt;</a>
-            <h4 style="padding: 40px">Works</h4>
-            <a class="works_navigator" href="../photo/aqua.html">&gt;</a>
+            <a
+              style="position: relative; top: -5px"
+              class="works_navigator"
+              href="../photo/naval.html"
+              >&lt;</a
+            >
+            <a class="works_navigator" href="../../index.html#second">
+              <h4 style="padding: 40px">Work</h4>
+            </a>
+            <a
+              style="position: relative; top: -5px"
+              class="works_navigator"
+              href="../photo/naval.html"
+              >&gt;</a
+            >
           </div>
           <div class="grid-container">
             <div class="add-padding" style="padding-top: 30px">
