--- a/works/photo/naval.html
+++ b/works/photo/naval.html
@@ -129,9 +129,21 @@
             />
           </div>
           <div class="center-item" style="padding-top: 30px">
-            <a class="works_navigator" href="golden.html">&lt;</a>
-            <h4 style="padding: 40px">Work</h4>
-            <a class="works_navigator" href="../uiux/dogidiet.html">&gt;</a>
+            <a
+              style="position: relative; top: -5px"
+              class="works_navigator"
+              href="../photo/naval.html"
+              >&lt;</a
+            >
+            <a class="works_navigator" href="../../index.html#second">
+              <h4 style="padding: 40px">Work</h4>
+            </a>
+            <a
+              style="position: relative; top: -5px"
+              class="works_navigator"
+              href="../photo/naval.html"
+              >&gt;</a
+            >
           </div>
           <div class="grid-container">
             <div class="add-padding" style="padding-top: 30px">
