--- a/works/product/petmille.html
+++ b/works/product/petmille.html
@@ -142,9 +142,19 @@
             <img src="../../assets/img/petmille/petmille_14.png" />
           </div>
           <div class="center-item" style="padding-top: 30px">
-            <a class="works_navigator" href="../uiux/dogidiet.html">&lt;</a>
-            <h4 style="padding: 40px">Works</h4>
-            <a class="works_navigator" href="../brochure/mastocheck.html"
+            <a
+              style="position: relative; top: -5px"
+              class="works_navigator"
+              href="../photo/naval.html"
+              >&lt;</a
+            >
+            <a class="works_navigator" href="../../index.html#second">
+              <h4 style="padding: 40px">Work</h4>
+            </a>
+            <a
+              style="position: relative; top: -5px"
+              class="works_navigator"
+              href="../photo/naval.html"
               >&gt;</a
             >
           </div>
