--- a/works/uiux/dogidiet.html
+++ b/works/uiux/dogidiet.html
@@ -137,9 +137,21 @@
             <img src="../../assets/img/uiux1/uiux1_10.png" />
           </div>
           <div class="center-item" style="padding-top: 30px">
-            <a class="works_navigator" href="../photo/naval.html">&lt;</a>
-            <h4 style="padding: 40px">Works</h4>
-            <a class="works_navigator" href="../product/petmille.html">&gt;</a>
+            <a
+              style="position: relative; top: -5px"
+              class="works_navigator"
+              href="../photo/naval.html"
+              >&lt;</a
+            >
+            <a class="works_navigator" href="../../index.html#second">
+              <h4 style="padding: 40px">Work</h4>
+            </a>
+            <a
+              style="position: relative; top: -5px"
+              class="works_navigator"
+              href="../photo/naval.html"
+              >&gt;</a
+            >
           </div>
           <div class="grid-container">
             <div class="add-padding" style="padding-top: 30px">
