photo size compressed

--- a/works/photo/evergreen.html
+++ b/works/photo/evergreen.html
@@ -120,6 +120,10 @@
               class="photo-group"
               src="../../assets/img/photo/Evergreen/Evergreen5.jpg"
             />
+            <img
+              class="photo-group"
+              src="../../assets/img/photo/Evergreen/Evergreen6.jpeg"
+            />
           </div>
           <div class="center-item" style="padding-top: 30px">
             <a
