--- a/works/uiux/dogidiet.html
+++ b/works/uiux/dogidiet.html
@@ -130,12 +130,7 @@
                   <div class="y-divider"></div>
                   <h6 style="padding-top: 10px">Jul-Aug 2020</h6>
                 </div>
-                <div class="add-padding">
-                  <p class="work-summ">
-                    This is a test for shurams page.blahblab habl bahal bahblahb
-                    blahblahb lbhbl abhal
-                  </p>
-                </div>
+                <div class="add-padding"></div>
               </div>
             </div>
 
