--- a/works/product/petmille.html
+++ b/works/product/petmille.html
@@ -131,12 +131,7 @@
                   <div class="y-divider"></div>
                   <h6 style="padding-top: 10px">May 2020</h6>
                 </div>
-                <div class="add-padding">
-                  <p class="work-summ">
-                    This is a test for shurams page.blahblab habl bahal bahblahb
-                    blahblahb lbhbl abhal
-                  </p>
-                </div>
+                <div class="add-padding"></div>
               </div>
             </div>
 
