Updated resume and added gitinore for DS_Store

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     </ul>
                     <a
                       class="resume_button"
-                      href="assets/document/JiSuPark_Resume_Masters.pdf"
+                      href="assets/document/Resume_2021_Ji Su_Park.pdf"
                       >Resume</a
                     >
                   </div>
